Fix z-index

--- a/public/styles/partials/common.scss
+++ b/public/styles/partials/common.scss
@@ -721,7 +721,7 @@ iframe {
 .btn-explore {
   top: 65px;
   position: fixed;
-  z-index: 2;
+  z-index: 4;
   right: 0;
 
   .link-explorer {
